fix HeaderNav on mobile

--- a/src/layouts/Header/components/HeaderNav/HeaderNav.module.scss
+++ b/src/layouts/Header/components/HeaderNav/HeaderNav.module.scss
@@ -102,7 +102,7 @@
 .mobile_background {
   pointer-events: none;
 
-  position: absolute;
+  position: fixed;
   z-index: 4;
   top: 0;
   left: 0;
